@@ -67,6 +67,7 @@
     <script type="application/javascript" src="scripts/services/tableinfo.js"></script>
     <script type="application/javascript" src="scripts/services/shardinfo.js"></script>
     <script type="application/javascript" src="scripts/services/nodeinfo.js"></script>
+    <script type="application/javascript" src="scripts/services/clustercheck.js"></script>
     <script type="application/javascript" src="scripts/services/udc.js"></script>
 
     <script type="application/javascript" src="scripts/controllers/common.js"></script>
@@ -97,4 +98,3 @@
 
 </body>
 </html>
-
